Save current Fabric 1.21 development state